--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "calendar",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Sivasanjay",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.8.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
